--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
   "name": "@michal-sternik/generic-table-component-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Generic table component library.",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "Michał Sternik",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-webpack5": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.21",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "storybook": "^7.4.0",
     "typescript": "^5.2.2"
   },
   "type": "module",
