--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
